# sematic

./: .bazelignore  .bazelrc  .dockerignore  .flake8  .gitignore  BUILD  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  WORKSPACE  abstract_future.py  calculator.py  future.py  mypy.ini  pyproject.toml  schema.sql  scratch  sematic.pth  sitecustomize.py  stub.py.tpl
.circleci/: config.yml  retry
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: test.yaml
bazel/: BUILD  bazel_python  dependencies.bzl  install.bzl  pipeline.bzl  ray  toolchain.bzl  worker.py
developer-docs/: README.md  tips-for-bazel.md
developer-docs/designs/: README.md  design_template.md  function_output_artifact_caching.md
docker/: Dockerfile.ci  Dockerfile.dev  Dockerfile.server  Dockerfile.worker  install_sqlite3.sh
docs/: README.md  SUMMARY.md  advanced-apis.md  advanced-features.md  api.md  architecture.md  artifacts.md  capabilities.md  changelog.md  cli.md  cloud-docker-images.md  cloud-resolver.md  cloud-runner.md  code-of-conduct.md  coming-soon.md  concepts.md  conf.py  container-images.md  contribute-example.md  contributor-guide.md  deploy.md  errors.md  execution-modes.md  first-pipeline.md  functions.md  future-algebra.md  get-started.md  github.md  glossary.md  grafana.md  index.rst  integrations.md  local-execution.md  metrics.md  mit.md  multiple-base-images.md  ray.md  real-example.md  sematic-ui.md  sematic-vs.md  (+6 more)
docs/developers/: guidelines.md  manual.md  types.md
docs/examples/: add.md
docs/handbook/: company_handbook.md
docs/source/: glow.api.endpoints.rst  glow.api.rst  glow.api.tests.rst  glow.db.models.rst  glow.db.rst  glow.db.tests.rst  glow.examples.add.rst  glow.examples.rst  glow.resolvers.rst  glow.rst  glow.types.rst  glow.types.types.rst  glow.utils.rst  modules.rst
glow/: BUILD  __init__.py  abstract_calculator.py  abstract_future.py  api_client.py  calculator.py  config.py  future.py  resolver.py
glow/api/: BUILD  app.py  docker-compose.yml  server.py
glow/db/: BUILD  db.py  queries.py  schema.sql
glow/resolvers/: BUILD  local_resolver.py  offline_resolver.py  state_machine_resolver.py
glow/tests/: BUILD  test_calculator.py  test_future.py  test_init.py
glow/types/: BUILD  __init__.py  casting.py  generic_type.py  registry.py  serialization.py  type.py
glow/ui/: BUILD.bazel  package-lock.json  package.json
glow/utils/: BUILD  config_dir.py  memoized_property.py
helm/sematic/: Chart.yaml  values.yaml
helm/sematic-grafana-dashboards/: Chart.yaml  values.yaml
helm/sematic-server/: Chart.yaml  values.yaml
my_project/: __main__.py  pipeline.py  requirements.txt
requirements/: BUILD  ci-requirements.txt  docs-requirements.txt  requirements.in  requirements.txt  requirements38.txt  requirements39.txt  requirements3_10.txt  requirements3_10_osx.txt  requirements3_11.txt  requirements3_8.txt  requirements3_8_linux.txt  requirements3_8_osx.txt  requirements3_9.txt  requirements3_9_osx.txt  test-requirements.txt
resolvers/: BUILD
resolvers/tests/: BUILD  test_local_resolver.py
sematic/: BUILD  __init__.py  abstract_calculator.py  abstract_function.py  abstract_future.py  abstract_metric.py  abstract_plugin.py  abstract_system_metric.py  alembic.ini  api_client.py  calculator.py  client.py  config.py  config_dir.py  conftest.py  container_images.py  credentials.py  docker_images.py  external_resource.py  function.py  future.py  future_context.py  graph.py  log_reader.py  logging.py  logs.py  metrics.py  plugins.py  resolver.py  retry_settings.py  runner.py  storage.py  torch_patch.py  user_settings.py  versions.py  wheel_constants.bzl  wheel_version.bzl
sematic/alembic/: env.py
sematic/api/: BUILD  app.py  server.py  wsgi.py
sematic/bazel/: dependencies.bzl  pipeline.bzl  rules_archives.bzl  toolchain.bzl  worker.py
sematic/caching/: BUILD  __init__.py  caching.py  git.py
sematic/cli/: BUILD  cancel.py  clean.py  cli.py  credentials.py  examples_utils.py  github.py  logs.py  main.py  migrate.py  new.py  process_utils.py  run.py  settings.py  start.py  stop.py  version.py
sematic/config/: BUILD  config.py  config_dir.py  server_settings.py  settings.py  user_settings.py
sematic/db/: BUILD  db.py  metrics_queries.py  migrate.py  migration_utils.py  queries.py  schema.sql.pg  schema.sql.sqlite
sematic/ee/: BUILD  LICENSE  README.md  __init__.py  extras.bzl  metrics.py  ray.py
sematic/examples/: README.md
sematic/external_resource_plugins/: BUILD  timed_message.py
sematic/func_testing/: BUILD  __init__.py  mock_sematic_funcs.py
sematic/future_operators/: BUILD  __init__.py  getitem.py  iter.py
sematic/metrics/: BUILD  cli.py  func_effective_runtime.py  func_effective_runtime_metric.py  func_run_count.py  func_success_rate.py  func_success_rate_metric.py  metric_point.py  metrics.py  run_count_metric.py  types_.py
sematic/plugins/: BUILD  abstract_auth.py  abstract_builder.py  abstract_external_resource.py  abstract_kuberay_wrapper.py  abstract_metrics_storage.py  abstract_publisher.py  abstract_storage.py
sematic/resolvers/: BUILD  Dockerfile  abstract_resource_manager.py  cloud_resolver.py  local_resolver.py  log_streamer.py  offline_resolver.py  resource_manager.py  resource_requirements.py  silent_resolver.py  state_machine_resolver.py  type_utils.py  worker.py
sematic/runners/: BUILD  cloud_runner.py  local_runner.py  silent_runner.py  state_machine_runner.py
sematic/scheduling/: BUILD  external_job.py  job_details.py  job_scheduler.py  kubernetes.py
sematic/storage/: local_storage.py  memory_storage.py  s3_storage.py
sematic/testing/: BUILD  __init__.py  mock_funcs.py
sematic/tests/: BUILD  fixtures.py  test_38_interpreter.py  utils.py  (+26 more)
tests/: test_calculator.py
tools/: BUILD  glow_rules.bzl  pytest_runner.py  rules.tar  sematic_pipeline.bzl  sematic_rules.bzl  sematic_wheel_rule.bzl  stamp.bzl  switch-settings.sh  switch-user-settings.sh  test_rules.bzl
types/: BUILD  type.py
wandb/: latest-run
web/: package-lock.json  package.json  tsconfig.json
(+871 files in other folders)
